k8s/kube-08-configure/src/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: main
  name: mydeploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
        - image: wbitt/network-multitool
          name: multitool
          imagePullPolicy: IfNotPresent
        - image: busybox
          name: busybox
          command: ['sh', '-c', 'sleep infinity']
          imagePullPolicy: IfNotPresent
